added low finding for dyad

--- a/cod4rena/2024-04-dyad.md
+++ b/cod4rena/2024-04-dyad.md
@@ -1,4 +1,5 @@
-# Overview
+# Report
+## Overview
 Dyad is a stablecoin minted through a collateralized debt position ecosystem. Users mint a dNFT as the entry point into the system. The dNFT allows users to deposit and withdraw collateral (wETH, wstETH), mint and redeem Dyad, and liquidate positions below 150% collateral ratios. 
 
 The goal is to maintain a 150% collateralization ratio with the current accepted assets wETH and wstETH. This means that each Dyad is backed by $1.50. The extra collateralization gives value to another token in the ecosystem, an ERC20, Kerosene. The value of Kerosene is deterministic based the total USD value of all wETH and wstETH collateral, the total supply of Dyad stablecoins, and the total supply of Kerosene tokens.
@@ -7,8 +8,8 @@ The Dyad stablecoin is already live with 1M TVL. The project is implementing an 
 
 This audit contest focuses on the new vault management system and Kerosene token.
 
-# Architecture
-## Actors
+## Architecture
+### Actors
 **User**
 The user is represented through the `dNFT`. The `dNFT` allows users to deposit, withdraw, mint dyad, redeem dyad, and liquidate other `dNFT` positions. 
 
@@ -24,8 +25,8 @@ The vault manager allows `dNFTs` to participate in the vault system. The vault m
 ## System Design
 ![Dyad](https://i.ibb.co/dr7Yhx2/dyad-map.png)
 
-# Codebase 
-## Analysis
+## Codebase 
+### Analysis
 The codebase is well organized. It utilizes interfaces and libraries from OpenZeppelin and Solmate. While not all files have comments, the interface files have comments and describe the purpose of each function. 
 
 Concerns are logically separated into different files:
@@ -33,8 +34,8 @@ Concerns are logically separated into different files:
 - All of the interactions a `dNFT` can initiate are handled in a vault manager file. 
 - Kerosene vaults have their own file. 
 
-## Files
-### `VaultManagerV2`
+### Files
+#### `VaultManagerV2`
 - Inherits `IVaultManager`, `Initializable`
 
 This file handles the majority of user interactions. When a dNFT owner wants to add or withdraw collateral, mint or redeem Dyad, or liquidate another dNFT holder's position, `VaultMangerV2` handles all of that logic. 
@@ -63,7 +64,7 @@ So this file associated a `dNFT` id with `vault` addresses.
 | `getVaults`           | `external`                                | Returns an array of vault addresses for the associated `dNFT` id                                                                                                                                 |
 | `hasVault`            | `external`                                | Returns a `boolean` on whether the `dNFT` id contains the `vault` address                                                                                                                        |
 
-### `KerosineManager`
+#### `KerosineManager`
 - Inherits `Owned`. Owner is set to `msg.sender`
 
 This files manages Kerosene vaults. A maximum amount of 10 vaults can be created. The vaults are stored in `vaults` which is a private `EnumerableSet.AddressSet` from the `EnumerableSet` library.
@@ -75,7 +76,7 @@ This files manages Kerosene vaults. A maximum amount of 10 vaults can be created
 | `getVaults`  | `external`              | Returns an array of all the `vault` addresses in `vaults`        |
 | `isLicensed` | `external`              | Returns a boolean on whether `vaults` contains a `vault` address |
 
-### `Vault.kerosine`
+#### `Vault.kerosine`
 - Inherits `Ivault`, `Owned`. Owner is set to `msg.sender`
 
 This file is meant to be inherited by the other Kerosine vault files. It is responsible for tracking the assets associated with a `dNFT` id. This is done through the `id2asset` mapping which maps a `dNFT` id to an asset amount.
@@ -87,7 +88,7 @@ This file is meant to be inherited by the other Kerosine vault files. It is resp
 | `getUsdValue` | `public`                       | Returns a `uint` of the usd value of the assets associated with the `dNFT` id                   |
 | `assetPrice`  | `public`, `virtual`            | This function will be overriden when used by the other Kerosene vault files and return a `uint` |
 
-### `Vault.kerosine.bounded.sol`
+#### `Vault.kerosine.bounded.sol`
 - Inherits `KerosineVault` (`Vault.Kerosine`)
 
 This is a vault for Kerosene ERC20. Kerosene can be bounded or unbounded. This file handles bounded Kerosene vault. Bounded Kerosene can't be withdrawn and it is double the price of regular Kerosene. 
@@ -98,7 +99,7 @@ This is a vault for Kerosene ERC20. Kerosene can be bounded or unbounded. This f
 | `withdraw`                  | `onlyVaultManager`, `external` | "Bounded" Kerosene is not withdrawable. This is seems to be related to staking.                                                         |
 | `assetPrice`                | `piblic`, `override`           | Calls the `assetPrice` function from `UnboundedKerosineVault` function. Return a `uint`. Bounded Kerosene is 2x the price of unbounded. |
 
-### `Vault.kerosine.unbounded`
+#### `Vault.kerosine.unbounded`
 - Inherits `KerosineVault` (`Vault.Kerosine`)
 
 Unlike "bounded" Kerosene, this vault is withdrawable tracking "unbounded" Kerosene. It tracks assets with the `id2asset` mapping.
@@ -109,7 +110,7 @@ Unlike "bounded" Kerosene, this vault is withdrawable tracking "unbounded" Keros
 | `setDenominator` | `onlyOwner`, `external`        | Sets the address for the `KerosineDenominator` file                                                                        |
 | `assetPrice`     | `public`, `override`           | Returns a `uint` which is an asset price derived from the Dyad total supply divided by the total supply of Kerosene        |
 
-### `KerosineDenominator`
+#### `KerosineDenominator`
 - Inherits `Parameters`
 
 This file exists to return the total supply of Kerosene tokens. The `MAINNET_OWNER`'s supply is subtracted from the total supply. 
@@ -118,13 +119,13 @@ This file exists to return the total supply of Kerosene tokens. The `MAINNET_OWN
 | ------------- | ---------- | ------------------------------------------------------------------------------------------------------------------------------- |
 | `denominator` | `external` | Returns a `uint` of the total supply of Kerosene tokens. The `MAINNET_OWNER` total amount is subtracted to arrive at the total. |
 
-### `Deploy.V2.sol`
+#### `Deploy.V2.sol`
 - Inherits `Script`, `Parameters`.
 
 The deploy script handles the creation of `vault`s and the `vaultLicenser`. The `Licenser` is not in the scope of this audit, but all `vaults` must be "licensed" in order to handle deposits/withdrawals. This deploy script creates the vaults, sets an address for the `vaultLicenser`, and "licenses" the vaults.
 
 
-# Review
+## Review
 **Comments**
 Interface files have comments, but the files in scope for this audit do not have comments. The `@inheritdoc` tag is used, which can be an effective way to avoid repeating comments in multiple files. 
 
@@ -158,5 +159,116 @@ The testing coverage, especially for the files in scope, is not very strong:
 | KerosineDenominator.sol      | 50.00% (1/2)    | 60.00% (3/5)    | 100.00% (0/0) | 50.00% (1/2)  |
 | Deploy.V2.s.sol              | 100.00% (22/22) | 100.00% (31/31) | 100.00% (0/0) | 100.00% (1/1) |
 
-Auditors have to make a lot of assumptions because not all behavior is made clear through documentation and comments. It would be helpful to know why licensing is necessary. Why so users have to pay an increasing fee to mint a `dNFT` while insiders can mint for free?
+Auditors have to make a lot of assumptions because not all behavior is made clear through documentation and comments. It would be helpful to know why licensing is necessary. Why do users have to pay an increasing fee to mint a `dNFT` while insiders can mint for free? While the `dNFT` and Licensing mechanic aren't in the scope of this audit, they are valid centralization concerns that indirectly affect this audit.   
 
+# Findings
+## Low 
+### User can't withdraw until after 10 blocks 
+#### Details
+This bug is related to the flashloan protection mechanic and affects the if check in the `withdraw` function in [`VaultManagerV2`](https://github.com/code-423n4/2024-04-dyad/blob/main/src/core/VaultManagerV2.sol#L143) :
+```solidity
+if (idToBlockOfLastDeposit[id] == block.number) revert DepositedInSameBlock();
+```
+
+The intended behavior is to prevent transactions from occurring in the same block to prevent a flashloan attack. This is done with the [`idToBlockOfLastDeposit`](https://github.com/code-423n4/2024-04-dyad/blob/main/src/core/VaultManagerV2.sol#L37):
+```solidity
+mapping (uint => uint) public idToBlockOfLastDeposit;
+```
+
+Whenever a deposit is made, the [`deposit`](https://github.com/code-423n4/2024-04-dyad/blob/main/src/core/VaultManagerV2.sol#L127) function updates the `idToBlockOfLastDeposit` mapping:
+```solidity
+idToBlockOfLastDeposit[id] = block.number;
+```
+
+However, in the Foundry testing environment, the revert `DepositedInSameBlock()` throws if a withdraw is attempted before 10 blocks. 
+#### Proof of Concept
+I added a getter function for `idToBlockOfLastDeposit` in [`VaultManagerV2.sol`](https://github.com/code-423n4/2024-04-dyad/blob/main/src/core/VaultManagerV2.sol#L127):
+```solidity
+function getBlockNumber(uint id) public view returns(uint) {
+	return idToBlockOfLastDeposit[id];
+}
+```
+
+I've also edited the the original [`VaultManagerHelper.t.sol`](https://github.com/code-423n4/2024-04-dyad/blob/main/test/VaultManager.t.sol).
+- To the `deposit` helper function, I added a `console.log` to display the block number 
+- I added a `withdraw` helper function to roll blocks forward and then withdraw:
+```solidity
+  function mintDNft() public returns (uint) {
+    return dNft.mintNft{value: 1 ether}(address(this));
+  }
+
+  function addVault(uint id, address vault) public {
+    vm.prank(vaultLicenser.owner());
+    vaultLicenser.add(vault);
+    vaultManager. add(id, vault);
+  }
+
+  function deposit(
+    ERC20Mock token,
+    uint      id,
+    address   vault,
+    uint      amount
+
+  ) public {
+    token.mint(address(this), amount);
+    token.approve(address(vaultManager), amount);
+    vaultManager.deposit(id, address(vault), amount);
+    uint newLastBlock = vaultManager.getBlockNumber(id);
+    console.log("deposit block: ", newLastBlock);
+    emit log_uint(block.number);
+  }
+
+  function withdraw(
+    uint    id,
+    address vault,
+    uint    amount,
+    address to
+  ) public {
+    vm.roll(10);
+    uint lastBlock = vaultManager.getBlockNumber(id);
+    console.log("withdraw deposit block: ", lastBlock);
+    emit log_uint(block.number);
+    vaultManager.withdraw(id, vault, amount, to);
+  }
+```
+
+This test that I created will correctly revert with `[FAIL. Reason: DepositedInSameBlock()]` as the withdraw occurs in the same block as the deposit:
+```solidity
+function test_bug_withdraw() public {
+    uint AMOUNT = 1e18;
+    uint id = mintDNft();
+
+    vaultManager.add(id, address(wethVault));
+
+    deposit(weth, id, address(wethVault), AMOUNT);
+
+    vaultManager.withdraw(id, address(wethVault), AMOUNT, RECEIVER);
+
+    assertEq(vaultManager.getVaults(id)[0], address(wethVault));
+  }
+```
+- The console.log from the deposit helper function returns `1`
+
+When I updated the test to use the `withdraw` helper function which rolls 10 blocks, we still get the same `[FAIL. Reason: DepositedInSameBlock()]` revert:
+```solidity
+function test_bug_withdraw() public {
+    uint AMOUNT = 1e18;
+
+    uint id = mintDNft();
+    vaultManager.add(id, address(wethVault));
+
+    deposit(weth, id, address(wethVault), AMOUNT);
+    withdraw(id, address(wethVault), AMOUNT, RECEIVER);
+  }
+```
+- The console.log from the deposit helper function returns `1`
+- The console.log from the withdraw helper function returns `10`
+
+When I updated the `withdraw` helper function and use a `vm.roll(11)`, the withdraw is successful. 
+- The console.log from the deposit helper function returns `1`
+- The console.log from the withdraw helper function returns `11`
+#### Tools Used
+Manual Review
+
+#### Recommended Mitigation Steps
+While this bug doesn't affect the overall functionality of the protocol, it could be useful information to disclose to users. Let them know that you can withdraw after 10 blocks. 
